--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.rs2xml.jar}:\
-    ${libs.beans-binding.classpath}
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
